<resources>
    <string name="app_name">Bank Sampah Sahitya</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="label_savings">Tabungan</string>
    <string name="label_garbage_info">Info Sampah</string>
    <string name="label_ranking">Peringkat</string>
    <string name="label_report">Laporan</string>
    <string name="label_profile">Profil</string>
    <string name="label_greeting">Halo,</string>
    <string name="value_name">Nasabah!</string>
    <string name="label_savings_greeting">Ayo kumpulkan sampahmu dan tukar dengan sejumlah uang hanya di Bank Sampah Sahitya!</string>
    <string name="label_amount">Total Uang</string>
    <string name="label_currency">Rp</string>
    <string name="value_amount">75.000</string>
    <string name="label_details"><u>Details</u></string>
    <string name="unit_weight">Kg</string>
    <string name="value_weight">21</string>
    <string name="label_weight">Berat Sampah</string>
    <string name="label_history_disbursement">Riwayat Pencairan</string>
    <string name="laporan_tabungan">Laporan Tabungan</string>
    <string name="label_week">MINGGU 1</string>
    <string name="label_weight_small">Berat : </string>
    <string name="label_value_weight">16</string>
    <string name="total">Total</string>
    <string name="weight">Berat : 16 Kg</string>
    <string name="label_name">Ikhsan Permana</string>
    <string name="label_email">ikhsanpermana@gmail.com</string>
    <string name="label_logo_sahitya">Bank Sampah Sahitya</string>
    <string name="label_logout">Logout</string>
    <string name="label_disbursement">Pencairan</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="belum_memiliki_akun">Belum Memiliki Akun?</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="forgot_password"><u>Lupa Kata Sandi?</u></string>
    <string name="label_instructions">Masukkan alamat email yang anda gunakan ketika anda bergabung dan kami akan mengirimkan anda instruksi untuk mereset kata sandi anda</string>
    <string name="email_address">Email Address</string>
    <string name="send_email">Send Email</string>
    <string name="nama">Nama</string>
    <string name="nim">NIM</string>
    <string name="fakultas">Fakultas</string>
    <string name="jurusan">Jurusan</string>
    <string name="no_hp">No. HP</string>
    <string name="alamat">Alamat</string>
    <string name="tanggal_lahir">Tanggal Lahir (YYYY-MM-DD)</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="bank_sampah_sahitya">Bank Sampah Sahitya</string>
    <string name="daftar">Daftar</string>
    <string name="label_ranking_mingguan">Ranking Mingguan</string>
    <string name="label_per_minggu">Minggu Ke- Bulan Tahun</string>
    <string name="random_winner">Random Winner</string>
    <string name="nama_random_winner">Nama</string>
    <string name="null_value">0</string>
    <string name="regist">Daftar</string>
    <string name="regist_success">Akun Telah Berhasil Terdaftar</string>
    <string name="kode_verifikasi">Kode Verifikasi</string>
    <string name="label_kode_verifikasi">Masukkan kode verifikasi yang sudah dikirim ke email anda</string>
    <string name="kirim">Kirim</string>
    <string name="value_time">17:34</string>
    <string name="label_stripe">-</string>
    <string name="label_date">12 Okt 19</string>
    <string name="label_income">Pendapatan Saat Ini</string>
    <string name="value_income">Rp 75.000</string>
    <string name="value_amount_1">21.400</string>
    <string name="value_amount_2">12.000</string>
    <string name="value_amount_3">34.500</string>
    <string name="value_amount_4">10.000</string>
    <string name="value_time_1">17:34</string>
    <string name="value_time_2">12:09</string>
    <string name="value_time_3">16:44</string>
    <string name="value_time_4">16:05</string>
    <string name="value_date_1">12 Okt 2019</string>
    <string name="value_date_3">19 Okt 2019</string>
    <string name="label_help">Bantuan</string>
    <string name="label_edit_profile">Edit Profil</string>
    <string name="label_change_password">Ganti Password</string>
    <string name="label_settings">Pengaturan</string>
    <string name="hint_new_password">Password Baru</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="label_save">Simpan</string>
    <string name="label_register">Daftar</string>


    <string-array name="fakultas">
        <item>Pilih Fakultas</item>
        <item>Ilmu Tarbiyah Dan Keguruan</item>
        <item>Adab Dan Humaniora</item>
        <item>Ushuluddin</item>
        <item>Syariah Dan Hukum</item>
        <item>Dakwah Dan Ilmu Komunikasi</item>
        <item>Dirasat Islamiyah</item>
        <item>Psikologi</item>
        <item>Ekonomi Dan Bisnis</item>
        <item>Sains Dan Teknologi</item>
        <item>Ilmu Kesehatan</item>
        <item>Ilmu Sosial Dan Ilmu Politik</item>
        <item>Kedokteran</item>
    </string-array>

    <string-array name="jurusan_no_selected">
        <item>Pilih Jurusan</item>
    </string-array>

    <string-array name="jurusan_fitk">
        <item>Pilih Jurusan</item>
        <item>Pendidikan Agama Islam</item>
        <item>Pendidika Bahasa Arab</item>
        <item>Pendidikan Bahasa Inggris</item>
        <item>Pendidikan Biologi</item>
        <item>Pendidikan Kimia</item>
        <item>Pendidikan Fisika</item>
        <item>Pendidikan Matematika</item>
        <item>Manajemen Pendidikan</item>
        <item>Pendidikan Guru Madrasah Ibtidaiyah</item>
        <item>Pendidikan Bahasa dan Sastra Indonesia</item>
        <item>Pendidikan Ilmu Pengetahuan Sosial</item>
        <item>Pendidikan Islam Anak Usia Dini</item>
    </string-array>

    <string-array name="jurusan_adab_humaniora">
        <item>Pilih Jurusan</item>
        <item>Bahasa dan Sastra Arab</item>
        <item>Sejarah dan Kebudayaan Islam</item>
        <item>Tarjamah</item>
        <item>Ilmu Perpustakaan</item>
        <item>Bahasa dan Sastra Inggris</item>
    </string-array>

    <string-array name="jurusan_ushuluddin">
        <item>Pilih Jurusan</item>
        <item>Studi Agama Agama</item>
        <item>Ilmu Alquran dan Tafsir</item>
        <item>Ilmu Hadist</item>
        <item>Aqidah dan Filsafat Islam</item>
        <item>Ilmu Tasawuf</item>
    </string-array>

    <string-array name="jurusan_syariah_hukum">
        <item>Pilih Jurusan</item>
        <item>Hukum Keluarga (Ahwal Syakhsiyyah)</item>
        <item>Perbandingan Mazhab</item>
        <item>Hukum Tata Negara (Siyasah)</item>
        <item>Hukum Pidana Islam (Jinayah)</item>
        <item>Hukum Ekonomi Syariah (Muamalat)</item>
        <item>Ilmu Hukum</item>
    </string-array>

    <string-array name="jurusan_dakwah_komunikasi">
        <item>Pilih Jurusan</item>
        <item>Komunikasi dan Penyiaran Islam</item>
        <item>Bimbingan dan Penyuluhan Islam</item>
        <item>Manajemen Dakwah</item>
        <item>Pengembangan Masyarakat Islam</item>
        <item>Kesejahteraan Sosial</item>
        <item>Jurnalistik</item>
    </string-array>

    <string-array name="jurusan_dirasat">
        <item>Pilih Jurusan</item>
        <item>Dirasat Islamiyah</item>
    </string-array>

    <string-array name="jurusan_psikologi">
        <item>Pilih Jurusan</item>
        <item>Psikologi</item>
    </string-array>

    <string-array name="jurusan_ekonomi">
        <item>Pilih Jurusan</item>
        <item>Manajemen</item>
        <item>Akuntansi</item>
        <item>Ilmu Ekonomi dan Studi Pembangunan</item>
        <item>Ekonomi Syariah</item>
        <item>Perbankan Syariah</item>
    </string-array>

    <string-array name="jurusan_sains_teknologi">
        <item>Pilih Jurusan</item>
        <item>Agribisnis</item>
        <item>Teknik Informatika</item>
        <item>Sistem Informasi</item>
        <item>Matematika</item>
        <item>Biologi</item>
        <item>Kimia</item>
        <item>Fisika</item>
        <item>Teknik Pertambangan</item>
    </string-array>

    <string-array name="jurusan_ilmu_kesehatan">
        <item>Pilih Jurusan</item>
        <item>Kesehatan Masyarakat</item>
        <item>Farmasi</item>
        <item>Ilmu Keperawatan</item>
        <item>Program Profesi Keperawatan (Ners)</item>
        <item>Program Profesi Farmasi (Apoteker)</item>
        <item></item>
    </string-array>

    <string-array name="jurusan_isip">
        <item>Pilih Jurusan</item>
        <item>Sosiologi</item>
        <item>Ilmu Politik</item>
        <item>Ilmu Hubungan Internasional</item>
    </string-array>

    <string-array name="jurusan_kedokteran">
        <item>Pilih Jurusan</item>
        <item>Kedokteran dan Pendidikan Dokter</item>
    </string-array>
</resources>