<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingTop="@dimen/item_margin_8"
    android:paddingBottom="@dimen/item_margin_8">

    <TextView
        android:id="@+id/tv_currency"
        android:layout_marginRight="@dimen/item_margin_4"
        android:text="@string/label_currency"
        android:textSize="@dimen/item_size_18"
        style="@style/TextViewRobotoBoldBlack"/>

    <TextView
        android:id="@+id/tv_amount"
        android:layout_toRightOf="@id/tv_currency"
        android:text="@string/value_amount"
        android:textSize="@dimen/item_margin_18"
        style="@style/TextViewRobotoBoldBlack" />

    <TextView
        android:id="@+id/tv_time"
        style="@style/TextViewRobotoBold16"
        android:layout_below="@id/tv_currency"
        android:text="@string/value_time" />

    <TextView
        android:id="@+id/tv_stripe"
        android:layout_below="@id/tv_currency"
        android:layout_toRightOf="@id/tv_time"
        android:text="@string/label_stripe"
        style="@style/TextViewRobotoBold16"
        android:layout_marginRight="@dimen/item_margin_4"
        android:layout_marginLeft="@dimen/item_margin_4"/>

    <TextView
        android:id="@+id/tv_date"
        android:layout_below="@id/tv_currency"
        android:layout_toRightOf="@id/tv_stripe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_date"
        style="@style/TextViewRobotoBold16"/>

    <View
        android:layout_below="@id/tv_time"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_margin_2"
        android:layout_marginTop="@dimen/item_margin_10"
        android:background="@color/border"/>

    <ImageView
        android:layout_width="@dimen/item_margin_30"
        android:layout_height="@dimen/item_margin_30"
        android:scaleType="centerCrop"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_checklist"
        android:layout_centerVertical="true"/>

</RelativeLayout>