<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/item_margin_2"
        android:paddingRight="@dimen/item_margin_2"
        android:paddingBottom="@dimen/item_margin_4"
        android:background="@drawable/shadow"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@android:color/transparent"
            card_view:cardElevation="@dimen/item_margin_10"
            app:cardCornerRadius="@dimen/item_radius_8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/item_margin_8"
                android:background="@drawable/shadow_card_view"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_week"
                        android:textStyle="bold"
                        android:layout_marginRight="230dp"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/tv_berat_laporan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/item_margin_8"
                        android:layout_marginStart="@dimen/item_margin_8"
                        android:layout_gravity="right"
                        android:gravity="right"
                        android:paddingLeft="@dimen/item_margin_2"
                        android:paddingRight="@dimen/item_margin_2"
                        android:text="@string/label_weight_small"
                        android:textSize="@dimen/item_size_12"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/label_value_weight"
                        android:textSize="@dimen/item_size_12"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/item_margin_4"
                        android:layout_gravity="right"
                        android:text="@string/unit_weight"
                        android:textSize="@dimen/item_size_12"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/item_margin_6"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_currency"
                        android:textStyle="bold"
                        android:textSize="@dimen/item_size_20"
                        android:textColor="@color/colorPrimaryDark"/>

                    <TextView
                        android:id="@+id/tv_total_uang"
                        android:layout_width="@dimen/item_margin_196"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/item_margin_8"
                        android:text="@string/value_amount"
                        android:textStyle="bold"
                        android:textSize="@dimen/item_size_20"
                        android:textColor="@color/colorPrimaryDark"/>

                    <TextView
                        android:layout_width="@dimen/item_margin_0"
                        android:layout_height="wrap_content"
                        android:text="@string/label_details"
                        android:textAlignment="viewEnd"
                        android:layout_weight="1"
                        android:textSize="@dimen/item_size_12"
                        android:gravity="end" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>