<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/item_margin_32"
    tools:context=".presentation.membership.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="@dimen/item_margin_120"
                android:layout_height="@dimen/item_margin_108"
                android:text="@string/label_logo_sahitya"
                app:fontFamily="@font/nova_square"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="26sp"
                android:layout_gravity="end"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/item_margin_6"
                android:src="@drawable/ic_recycle_sign_1_93px"
                android:layout_gravity="end"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_email_login_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:layout_marginTop="@dimen/item_margin_32"
            android:layout_marginBottom="@dimen/item_margin_12">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/item_margin_14"
                android:layout_marginTop="@dimen/item_margin_56"
                android:background="@drawable/bg_rounded_edit_text"
                android:textSize="@dimen/item_size_14"
                android:textColor="@color/colorFont"
                android:textColorHint="@color/colorDimGray"
                android:inputType="textEmailAddress"
                android:hint="@string/email"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_password_login_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            android:layout_marginBottom="@dimen/item_margin_12">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/item_margin_12"
                android:paddingBottom="@dimen/item_margin_12"
                android:paddingLeft="@dimen/item_margin_12"
                android:paddingRight="@dimen/item_margin_12"
                android:background="@drawable/bg_rounded_edit_text"
                android:textSize="@dimen/item_size_14"
                android:textColor="@color/colorFont"
                android:textColorHint="@color/colorDimGray"
                android:hint="@string/password"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_masuk_login_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_margin_32"
            android:background="@drawable/bg_rounded_green"
            android:text="@string/masuk"
            android:textSize="@dimen/item_size_14"
            android:textStyle="bold"
            android:textColor="@color/colorItemBackground"/>

        <TextView
            android:id="@+id/tv_forgot_password_login_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/colorDimGray"
            android:layout_marginTop="@dimen/item_margin_16"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_margin_8"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belum_memiliki_akun"
                android:textColor="@color/colorDimGray"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tv_sign_up_login_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>