<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForgotPasswordActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_forgot_password"

            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/background"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/item_margin_32"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="@dimen/item_margin_120"
                android:layout_height="@dimen/item_margin_108"
                android:text="@string/label_logo_sahitya"
                app:fontFamily="@font/nova_square"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="26sp"
                android:layout_gravity="end"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/item_margin_6"
                android:src="@drawable/ic_recycle_sign_1_93px"
                android:layout_gravity="end"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_margin_32"
            android:text="@string/forgot_password"
            android:textSize="@dimen/item_size_20"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_margin_8"
            android:textColor="@android:color/black"
            android:textSize="@dimen/item_size_14"
            android:text="@string/label_instructions"/>

        <EditText
            android:id="@+id/edit_text_email_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/item_margin_12"
            android:layout_marginTop="@dimen/item_margin_32"
            android:background="@drawable/bg_rounded_edit_text"
            android:textSize="@dimen/item_size_14"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorFont"
            android:textAlignment="center"
            android:textStyle=""
            android:hint="@string/email_address"/>

        <Button
            android:id="@+id/btn_send_email_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_margin_16"
            android:layout_marginBottom="@dimen/item_margin_8"
            android:background="@drawable/bg_rounded_green"
            android:text="@string/send_email"
            android:textSize="@dimen/item_size_14"
            android:textStyle="bold"
            android:textColor="@color/colorItemBackground" />

    </LinearLayout>
</LinearLayout>