<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_toolbar"
    tools:context=".presentation.membership.changepassword.ChangePasswordActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/item_margin_20"
        android:layout_marginBottom="@dimen/item_margin_20"
        android:layout_gravity="center">

        <TextView
            android:layout_width="@dimen/item_margin_120"
            android:layout_height="@dimen/item_margin_120"
            android:layout_marginRight="@dimen/item_margin_8"
            android:layout_marginEnd="@dimen/item_margin_8"
            android:text="@string/label_logo_sahitya"
            app:fontFamily="@font/nova_square"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="26sp"
            android:maxLines="3"
            android:gravity="center_vertical"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_recycle_sign_1_93px"
            android:layout_gravity="center"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_new_pass"
        app:hintEnabled="false"
        android:layout_marginTop="@dimen/item_margin_32"
        app:passwordToggleEnabled="true"
        style="@style/TextInputPadding48">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_marginTop="@dimen/item_margin_56"
            android:hint="@string/hint_new_password"
            style="@style/TextInputRounded14" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_confirm_pass"
        app:hintEnabled="false"
        style="@style/TextInputPadding48"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="@dimen/item_margin_16"
        android:layout_marginBottom="@dimen/item_margin_12">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/TextInputRounded14"
            android:layout_marginTop="@dimen/item_margin_56"
            android:hint="@string/hint_confirm_password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin_32"
        android:background="@drawable/bg_rounded_green"
        android:text="@string/label_save"
        android:textSize="@dimen/item_size_14"
        android:textStyle="bold"
        android:textColor="@color/colorItemBackground"
        android:layout_marginLeft="@dimen/item_margin_48"
        android:layout_marginRight="@dimen/item_margin_48"/>



</LinearLayout>